--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/vuetify": "^1.12.1",
-    "nuxt-delay-hydration": "^0.4.5"
+    "autoprefixer": "^10.4.13",
+    "nuxt-delay-hydration": "^0.4.5",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
