--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.7.1",
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/vuetify": "^1.12.1",
     "autoprefixer": "^10.4.13",
