--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.3.1",
     "core-js": "^3.15.1",
+    "lite-youtube-embed": "^0.2.0",
     "nuxt": "^2.15.7",
-    "vuetify": "^2.5.5"
+    "vuetify": "^2.5.5",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@nuxt/image": "^0.7.1",
