--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.3.1",
+    "cookie": "^0.5.0",
     "core-js": "^3.15.1",
+    "js-cookie": "^3.0.1",
     "lite-youtube-embed": "^0.2.0",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5",
