--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "devhouse": "nuxt && lighthouse http://localhost:3000 --view",
     "build": "nuxt build --modern=server",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -25,6 +26,7 @@
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/vuetify": "^1.12.1",
     "autoprefixer": "^10.4.13",
+    "lighthouse": "^10.1.0",
     "nuxt-delay-hydration": "^0.4.5",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
